--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./style.css">
         <title>nlw-Calendario da Copa</title>
     </head>
     <body>
@@ -23,6 +24,11 @@
                             <img src="./assets/Bandeiras dos países/icon=cameroon.svg" alt="bandeira dos camarões">
                         </li>
                         <li>
+                            <img src="./assets/Bandeiras dos países/icon=uruguay.svg" alt="bandeira do uruguai">
+                            <strong>10:00</strong>
+                            <img src="./assets/Bandeiras dos países/icon=south korea.svg" alt="bandeira da coreia do sul">
+                        </li>
+                        <li>
                             <img src="./assets/Bandeiras dos países/icon=portugal.svg" alt="bandeira do portugal">
                             <strong>13:00</strong>
                             <img src="./assets/Bandeiras dos países/icon=ghana.svg" alt="bandeira da gana">
@@ -37,7 +43,24 @@
                 </div>
 
                 <div class="card">
-
+                    <h2>24/11 <span>Quinta</span></h2>
+                    <ul>
+                        <li>
+                            <img src="" alt="">
+                            <strong></strong>
+                            <img src="" alt="">
+                        </li>
+                        <li>
+                            <img src="" alt="">
+                            <strong></strong>
+                            <img src="" alt="">
+                        </li>
+                        <li>
+                            <img src="" alt="">
+                            <strong></strong>
+                            <img src="" alt="">
+                        </li>
+                    </ul>
                 </div>
             </main>
         </div>
