--- a/index.html
+++ b/index.html
@@ -9,60 +9,9 @@
     </head>
     <body>
         <div id="app">
-            <header>
-                <img src="./assets/logo.svg" alt="logo da nlw">
-            </header>
-
-            <main id="cards">
-                <div class="card">
-                    <h2>24/11 <span>Quinta</span></h2>
-
-                    <ul>
-                        <li>
-                            <img src="./assets/Bandeiras dos países/icon=swaziland.svg" alt="bandeira da swaziland">
-                            <strong>7:00</strong>
-                            <img src="./assets/Bandeiras dos países/icon=cameroon.svg" alt="bandeira dos camarões">
-                        </li>
-                        <li>
-                            <img src="./assets/Bandeiras dos países/icon=uruguay.svg" alt="bandeira do uruguai">
-                            <strong>10:00</strong>
-                            <img src="./assets/Bandeiras dos países/icon=south korea.svg" alt="bandeira da coreia do sul">
-                        </li>
-                        <li>
-                            <img src="./assets/Bandeiras dos países/icon=portugal.svg" alt="bandeira do portugal">
-                            <strong>13:00</strong>
-                            <img src="./assets/Bandeiras dos países/icon=ghana.svg" alt="bandeira da gana">
-                        </li>
-                        <li>
-                            <img src="./assets/Bandeiras dos países/icon=brazil.svg" alt="bandeira do brasil">
-                            <strong>16:00</strong>
-                            <img src="./assets/Bandeiras dos países/icon=serbia.svg" alt="bndeira da servia">
-                        </li>
-                    </ul>
-
-                </div>
-
-                <div class="card">
-                    <h2>24/11 <span>Quinta</span></h2>
-                    <ul>
-                        <li>
-                            <img src="" alt="">
-                            <strong></strong>
-                            <img src="" alt="">
-                        </li>
-                        <li>
-                            <img src="" alt="">
-                            <strong></strong>
-                            <img src="" alt="">
-                        </li>
-                        <li>
-                            <img src="" alt="">
-                            <strong></strong>
-                            <img src="" alt="">
-                        </li>
-                    </ul>
-                </div>
-            </main>
+           
         </div>
+
+        <script src="./main.js"></script>
     </body>
 </html>
