--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     </head>
     <body>
         <div id="app">
-           
+            <header>
+                <img src="./assets/logo.svg" alt="logo da nlw">
+            </header>
+            <main id="cards"></main>
         </div>
 
         <script src="./main.js"></script>
